Add authorize with bearer
