# docs/swagger.json
@@ -48,14 +48,11 @@
                 }
             }
         },
-        "/users": {
+        "/restricted/users": {
             "get": {
                 "security": [
                     {
-                        "ApiKeyAuth": []
-                    },
-                    {
-                        "BasicAuth": []
+                        "Bearer": []
                     }
                 ],
                 "description": "Return All Users",
@@ -113,13 +110,10 @@
         }
     },
     "securityDefinitions": {
-        "ApiKeyAuth": {
+        "Bearer": {
             "type": "apiKey",
-            "name": "X-API-Key",
+            "name": "Authorization",
             "in": "header"
-        },
-        "BasicAuth": {
-            "type": "basic"
         }
     }
 }
