# infrastructure/router/router.go
@@ -14,48 +14,6 @@ import (
 	"github.com/swaggo/echo-swagger"
 )
 
-func NewRouter(e *echo.Echo, c controller.AppController) *echo.Echo {
-	e.Use(middleware.Logger())
-	e.Use(middleware.Recover())
-
-	// e.GET("/users", func(context echo.Context) error { return c.GetUsers(context) })
-	// e.POST("/users", func(context echo.Context) error { return c.User.CreateUser(context) })
-	e.GET("/", func(context echo.Context) error { return c.Home(context) })
-	e.GET("/swagger/*", echoSwagger.WrapHandler)
-
-
-	e.POST("/login", login)
-    e.GET("/", accessible)
-	
-	g := e.Group("")
-
-	g.Use(middleware.BasicAuth(func(username, password string, c echo.Context) (bool, error) {
-
-	if username == "joe" && password == "secret" {
-		return true, nil
-	}
-	return false, nil
-	}))
-
-	g.GET("/users", func(context echo.Context) error { return c.GetUsers(context) })
-
-
-
-
-    // r := e.Group("/restricted")
-    // config := middleware.JWTConfig{
-    //     Claims:     &jwtCustomClaims{},
-    //     SigningKey: []byte("secret"),
-    // }
-    // r.Use(middleware.JWTWithConfig(config))
-    // r.GET("", restricted)
-	
-
-	return e
-}
-
-
-
 
 const secret = "secret"
  
@@ -65,7 +23,40 @@ type jwtCustomClaims struct {
     Admin bool   `json:"admin"`
     jwt.StandardClaims
 }
- 
+
+func restricted(c echo.Context) error {
+    user := c.Get("user").(*jwt.Token)
+    claims := user.Claims.(*jwtCustomClaims)
+    log.InfoDump(claims, "claims")
+    name := claims.Name
+    return c.String(http.StatusOK, "Welcome "+name+"!")
+}
+
+func NewRouter(e *echo.Echo, c controller.AppController) *echo.Echo {
+    e.HideBanner = true
+    e.HidePort = true
+	e.Use(middleware.Logger())
+	e.Use(middleware.Recover())
+
+	e.GET("/swagger/*", echoSwagger.WrapHandler)
+    e.POST("/login", login)
+    e.GET("/", func(context echo.Context) error { return c.Home(context) })
+    
+    r := e.Group("/restricted")
+    config := middleware.JWTConfig{
+        Claims:     &jwtCustomClaims{},
+        SigningKey: []byte("secret"),
+    }
+    r.Use(middleware.JWTWithConfig(config))
+    r.GET("", restricted)
+
+	r.GET("/users", func(context echo.Context) error { return c.GetUsers(context) })
+
+	// e.GET("/users", func(context echo.Context) error { return c.GetUsers(context) })
+	// e.POST("/users", func(context echo.Context) error { return c.User.CreateUser(context) })
+
+	return e
+}
 
 // login
 // @Summary login
@@ -80,10 +71,6 @@ func login(c echo.Context) error {
  
 	var user model.User
 	json.NewDecoder(c.Request().Body).Decode(&user)
-
-
-
-
     if user.Name != "pieter" || user.Password != "claerhout" {
         return echo.ErrUnauthorized
     }
@@ -107,16 +94,4 @@ func login(c echo.Context) error {
     return c.JSON(http.StatusOK, map[string]string{
         "token": t,
     })
-}
- 
-func accessible(c echo.Context) error {
-    return c.String(http.StatusOK, "Accessible")
-}
- 
-func restricted(c echo.Context) error {
-    user := c.Get("user").(*jwt.Token)
-    claims := user.Claims.(*jwtCustomClaims)
-    log.InfoDump(claims, "claims")
-    name := claims.Name
-    return c.String(http.StatusOK, "Welcome "+name+"!")
 }
