# interface/controller/user_controller.go
@@ -2,7 +2,7 @@ package controller
 
 import (
 	"net/http"
-"fmt"
+	"fmt"
 	"training/goproject/domain/model"
 	"training/goproject/usecase/interactor"
 )
@@ -27,10 +27,9 @@ func NewUserController(us interactor.UserInteractor) UserController {
 // @Tags id
 // @Accept  json
 // @Produce  json
-// @Security ApiKeyAuth
-// @Security BasicAuth
+// @Security Bearer
 // @Success 200 
-// @Router /users [get]
+// @Router /restricted/users [get]
 func (uc *userController) GetUsers(c Context) error {
 	fmt.Println("Endpoint Hit: GetUsers")
 	var u []*model.User
